--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -10,7 +10,7 @@ http {
    server {
        listen 80;
        location / {
-           return 200 "{{ $tpl .Values.message . }}";
+           return 200 "{{ tpl .Values.message . }}";
        }
    }
 }
